# NHL_Goal_Light

./: README.md
ESP32/: .gitignore  CMakeLists.txt  partitions_two_ota.csv  sdkconfig  sdkconfig.old  sdkconfigs
ESP32/components/audio_output/: CMakeLists.txt  audio.c  audio.h
ESP32/components/ble/: CMakeLists.txt  bluetooth.c  bluetooth.h
ESP32/components/https_interface/: CMakeLists.txt  https_interface.c  https_interface.h  parse_JSON.c  parse_JSON.h  temp.json
ESP32/components/nvs_storage/: CMakeLists.txt  nvs_storage.c  nvs_storage.h
ESP32/components/oled_display/: CMakeLists.txt  oled.c  oled.h
ESP32/components/ota/: CMakeLists.txt  ota.c  ota.h
ESP32/components/wifi/: CMakeLists.txt  wifi.c  wifi.h
ESP32/main/: CMakeLists.txt  idf_component.yml  main.c
PCB/: PCB.kicad_pcb  PCB.kicad_pro  PCB.kicad_sch  fp-lib-table  sym-lib-table
PCB/Downlaoded_Components/ESP32-S3-WROOM-1-N16R2/: XCVR_ESP32-S3-WROOM-1-N16R2.kicad_mod
mobile-app/: App.js  app.json  package-lock.json  package.json
mobile-app/app/assets/: loading-bar.json
mobile-app/app/components/: AdditionalSettingsModal.js  AppButton.js  AppFormField.js  AppLink.js  AppPicker.js  AppSlider.js  AppText.js  AppTextInput.js  DelaySlider.js  DeviceConnectionModal.js  ErrorMessage.js  Screen.js  SpeakerIndicator.js  SubmitButton.js  TeamPicker.js  TeamPickerComponent.js  VolumeSelectionComponent.js
mobile-app/app/config/: colors.js  index.js  teams.js  textStyles.js
mobile-app/app/hooks/: useBLE.js
mobile-app/app/screens/: ConnectionScreen.js  DeviceConnectionScreen.js  HomeScreen.js  (+1 more)
(+15 files in other folders)
